--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -31,39 +31,29 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <div class="container">
-            <div class="collapse navbar-collapse">
-                <span>
-                    <img src="{% static 'todo/icon.png' %}" alt="icon" width="30" height="30" class="mr-1">
-                </span>
-                <a class="navbar-brand" href="{% url 'home' %}"><span>Todo Woo</span></a>
-
+            <span>
+                <img src="{% static 'todo/icon.png' %}" alt="icon" width="30" height="30" class="mr-1">
+            </span>
+            <a class="navbar-brand mr-auto" href="{% url 'home' %}"><span>Todo Woo</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                 {% if user.is_authenticated %}
-                    <ul class="navbar-nav mr-auto inline">
-                        <li class="nav-item mx-1">
+                    <ul class="navbar-nav mr-auto ml-1">
+                        <li class="nav-item {% if request.path == '/todos/current/' %} active {% endif %}">
                             <a class="nav-link" href="{% url 'current' %}">
-                                {% if request.path == '/todos/current/' %}
-                                    <b>Current</b>
-                                {% else %}
-                                    Current
-                                {% endif %}
+                                Current
                             </a>
                         </li>
-                        <li class="nav-item mx-1">
+                        <li class="nav-item {% if request.path == '/todos/completed/' %} active {% endif %}">
                             <a class="nav-link" href="{% url 'completed' %}">
-                                {% if request.path == '/todos/completed/' %}
-                                    <b>Completed</b>
-                                {% else %}
-                                    Completed
-                                {% endif %}
+                                Completed
                             </a>
                         </li>
-                        <li class="nav-item mx-1">
+                        <li class="nav-item {% if request.path == '/todos/create/' %} active {% endif %}">
                             <a class="nav-link" href="{% url 'create' %}">
-                                {% if request.path == '/todos/create/' %}
-                                    <b>Create</b>
-                                {% else %}
-                                    Create
-                                {% endif %}
+                                Create
                             </a>
                         </li>
                     </ul>
@@ -71,7 +61,7 @@
                 {% endif %}
                 <ul class="navbar-nav ml-auto ">
                     {% if user.is_authenticated %}
-                        <li class="nav-item mx-1">
+                        <li class="nav-item">
                             <a href="#" onclick="$('#signOutBtn').click()" class="nav-link">Logout</a>
                             <form style='display: none;' method="POST" action="{% url 'logout_user' %}">
                                 {% csrf_token %}
@@ -80,8 +70,8 @@
                         </li>
 
                     {% else %}
-                        <li class="nav-item mx-1"><a href="{% url 'signup_user' %}" class="nav-link">Sign Up</a></li>
-                        <li class="nav-item mx-1"><a href="{% url 'login_user' %}" class="nav-link">Login</a></li>
+                        <li class="nav-item"><a href="{% url 'signup_user' %}" class="nav-link">Sign Up</a></li>
+                        <li class="nav-item"><a href="{% url 'login_user' %}" class="nav-link">Login</a></li>
                     {% endif %}
                 </ul>
 
